--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Skranji&display=swap&text=Block%20Island%20Glass%20Floats');
+        </style> 
         <title>Block Island float location map</title>
 
         <!--[if IE]>
@@ -20,8 +24,18 @@
     </head>
     <body>
         <script src="js/jquery.js"></script>
+        <div id = "title">
+            <h1>Block Island Glass Floats</h1>
+        </div>
         <div id = "intro">
-            <h1>Block Island Glass floats</h1>
+            <p>
+                Each year since 2012, glass floats made by Eben Horton, Jennifer Nauck and the staff at <a href=https://theglassstationstudio.com/collections/glass-float-project>The Glass Station Studio and Gallery</a> in Wakefield, RI 
+                have been hidden on Block Island as part of the Block Island Glass Floats project. Each float is individually numbered and dated. Most of these floats are made from clear glass, but each year the first several glass floats 
+                (the number equals the number of years after 2000, so for 2022 there will be 22) are specially designed floats with colors and designs. Anyone who finds a glass float is asked <a href=https://www.blockislandinfo.com/glass-float-project>to register the float number that they found and 
+                where on the island they found it </a>.
+                This map uses that information about float finding locations to show where the regular and special floats have been found on the island each year, and how many have been found in each area on the island.
+            </p>
+
         </div>
         <!--This commented out code section is now depolyed as a Leaflet custom control on the map-->
         <!--
@@ -58,6 +72,7 @@
             </form>
         </div>
     -->
+    <!--
         <div id = "background-div">
             <p>Choose a background map</p>
             <form id = "background-select">
@@ -71,7 +86,7 @@
                 <label for="blackwhite">Black and White</label>
             </form>
         </div>
-
+    -->
 
         <div id = "map">
                 
