--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>
                 Each year since 2012, glass floats made by Eben Horton, Jennifer Nauck and the staff at <a href=https://theglassstationstudio.com/collections/glass-float-project>The Glass Station Studio and Gallery</a> in Wakefield, RI 
                 have been hidden on Block Island as part of the Block Island Glass Floats project. Each float is individually numbered and dated. Most of these floats are made from clear glass, but each year the first several glass floats 
-                (the number equals the number of years after 2000, so for 2022 there will be 22) are specially designed floats with colors and designs. Anyone who finds a glass float is asked <a href=https://www.blockislandinfo.com/glass-float-project>to register the float number that they found and 
+                (the number equals the number of years after 2000, so for 2022 there will be 22) are specially designed floats with bright colors. Anyone who finds a glass float is asked <a href=https://www.blockislandinfo.com/glass-float-project>to register the float number that they found and 
                 where on the island they found it </a>.
                 This map uses that information about float finding locations to show where the regular and special floats have been found on the island each year, and how many have been found in each area on the island.
             </p>
