Some final formatting

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Skranji&display=swap&text=Block%20Island%20Glass%20Floats');
+            @import url('https://fonts.googleapis.com/css2?family=Skranji&display=swap&text=Block%20Island%20Glass%20Floats&family=Fira+Sans+Condensed&display=swap');
         </style> 
         <title>Block Island float location map</title>
 
@@ -29,11 +29,12 @@
         </div>
         <div id = "intro">
             <p>
-                Each year since 2012, glass floats made by Eben Horton, Jennifer Nauck and the staff at <a href=https://theglassstationstudio.com/collections/glass-float-project>The Glass Station Studio and Gallery</a> in Wakefield, RI 
-                have been hidden on Block Island as part of the Block Island Glass Floats project. Each float is individually numbered and dated. Most of these floats are made from clear glass, but each year the first several glass floats 
-                (the number equals the number of years after 2000, so for 2022 there will be 22) are specially designed floats with bright colors. Anyone who finds a glass float is asked <a href=https://www.blockislandinfo.com/glass-float-project>to register the float number that they found and 
-                where on the island they found it </a>.
-                This map uses that information about float finding locations to show where the regular and special floats have been found on the island each year, and how many have been found in each area on the island.
+                Each year since 2012, glass floats made by artists Eben Horton, Jennifer Nauck and the glassblowers at <a href=https://theglassstationstudio.com/collections/glass-float-project>The Glass Station Studio and Gallery</a> in Wakefield, RI 
+                have been hidden on Block Island as part of the Block Island Glass Floats project. 
+                Each float is individually numbered and dated. Most of these floats are made from clear glass, but each year the first several glass floats 
+                (the same number as the number of years after 2000, so for 2022 there will be 22) are extra fancy floats with bright colors and decorations. Anyone who finds a glass float is asked <a href=https://www.blockislandinfo.com/glass-float-project>to register the float number that they found and 
+                where on the island they found it.</a>
+                This map uses that information to show where the regular and fancy floats have been found on the island each year, and how many have been found in each area.
             </p>
 
         </div>
