--- a/index.html
+++ b/index.html
@@ -24,20 +24,22 @@
     </head>
     <body>
         <script src="js/jquery.js"></script>
-        <div id = "title">
-            <h1>Block Island Glass Floats</h1>
-        </div>
-        <div id = "intro">
-            <p>
-                Each year since 2012, glass floats made by artists Eben Horton, Jennifer Nauck and the glassblowers at <a href=https://theglassstationstudio.com/collections/glass-float-project>The Glass Station Studio and Gallery</a> in Wakefield, RI 
-                have been hidden on Block Island as part of the Block Island Glass Floats project. 
-                Each float is individually numbered and dated. Most of these floats are made from clear glass, but each year the first several glass floats 
-                (the same number as the number of years after 2000, so for 2022 there will be 22) are extra fancy floats with bright colors and decorations. Anyone who finds a glass float is asked <a href=https://www.blockislandinfo.com/glass-float-project>to register the float number that they found and 
-                where on the island they found it.</a>
-                This map uses that information to show where the regular and fancy floats have been found on the island each year, and how many have been found in each area.
-            </p>
+        <!--To layout the 3 vertical divs using a flexbox-->
+        <div class="box">
+            <div id = "title">
+                <h1>Block Island Glass Floats</h1>
+            </div>
+            <div id = "intro">
+                <p>
+                    Each year since 2012, glass floats made by artists Eben Horton, Jennifer Nauck and the glassblowers at <a href=https://theglassstationstudio.com/collections/glass-float-project>The Glass Station Studio and Gallery</a> in Wakefield, RI 
+                    have been hidden on Block Island as part of the Block Island Glass Floats project. 
+                    Each float is individually numbered and dated. Most of these floats are made from clear glass, but each year the first several glass floats 
+                    (the same number as the number of years after 2000, so for 2022 there will be 22) are extra fancy floats with bright colors and decorations. Anyone who finds a glass float is asked <a href=https://www.blockislandinfo.com/glass-float-project>to register the float number that they found and 
+                    where on the island they found it.</a>
+                    This map uses that information to show where the regular and fancy floats have been found on the island each year, and how many have been found in each area.
+                </p>
 
-        </div>
+            </div>
         <!--This commented out code section is now depolyed as a Leaflet custom control on the map-->
         <!--
         <section id="slide-section">
@@ -89,8 +91,9 @@
         </div>
     -->
 
-        <div id = "map">
-                
+            <div id = "map">
+                    
+            </div>
         </div>
         <script src="js/main.js"></script>
     </body>
