Adding source link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     where on the island they found it.</a>
                     This map uses that information to show where the regular and fancy floats have been found on the island each year, and how many have been found in each area.
                 </p>
+                <p id="source"><a href="https://github.com/geohouse/blockIslandGlassFloats">Here is the source code for this site</a></p>
 
             </div>
         <!--This commented out code section is now depolyed as a Leaflet custom control on the map-->
