--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Skranji&display=swap&text=Block%20Island%20Glass%20Floats&family=Fira+Sans+Condensed&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Skranji&display=swap&text=Block%20Island%20Glass%20Floats&family=Source+Sans+Pro&display=swap');
         </style> 
         <title>Block Island float location map</title>
 
