update font for screen scaling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Skranji&display=swap&text=Block%20Island%20Glass%20Floats&family=Source+Sans+Pro&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Skranji&display=swap&text=Block%20Island%20Glass%20Floats');
         </style> 
         <title>Block Island float location map</title>
 
@@ -36,7 +36,7 @@
                     Each float is individually numbered and dated. Most of these floats are made from clear glass, but each year the first several glass floats 
                     (same as the number of years after 2000, so for 2022 there will be 22) are extra fancy floats with bright colors and decorations. Anyone who finds a glass float is asked to register the year and number on their float and 
                     where on the island they found it.
-                    This map uses <a href="https://www.blockislandinfo.com/glass-float-project/found-floats">that information </a>to show where the regular and fancy floats have been found on the island each year, and how many have been found in each area.
+                    This interactive map uses <a href="https://www.blockislandinfo.com/glass-float-project/found-floats">that information </a>to show where the regular and fancy floats have been found on the island each year, and how many have been found in each area.
                 </p>
 
             </div>
