adding twitter card information

--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <!--Makes a Twitter Card that appears in any Tweet with a link to the site-->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@geohouseblend">
+        <meta name="twitter:creator" content="@geohouseblend">
+        <meta name="twitter:title" content="Interactive map of spots where glass floats have been found on Block Island, Rhode Island">
+        <meta name="twitter:description" content="Each summer since 2012, Eben Horton and others with the Block Island Glass Float Project hand-make and hide hundreds of glass floats around Block Island to be found by 'orbivores' (people who celebrate finding their 1 orb to keep per year).">
+        <meta name="twitter:image" content="https://geohouse.github.io/images/BlockIslandGlassFloat_thumbnail_v4.png">
         
+        <!--Import Google font for the title-->
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Skranji&display=swap&text=Block%20Island%20Glass%20Floats');
         </style> 
