--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@geohouseblend">
         <meta name="twitter:creator" content="@geohouseblend">
-        <meta name="twitter:title" content="Interactive map of spots where glass floats have been found on Block Island, Rhode Island">
+        <meta name="twitter:title" content="Interactive map - Glass floats on Block Island, RI">
         <meta name="twitter:description" content="Each summer since 2012, Eben Horton and others with the Block Island Glass Float Project hand-make and hide hundreds of glass floats around Block Island to be found by 'orbivores' (people who celebrate finding their 1 orb to keep per year).">
         <meta name="twitter:image" content="https://geohouse.github.io/images/BlockIslandGlassFloat_thumbnail_v4.png">
         
