update for 2022 and looking to 2023

--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
             </div>
             <div id = "intro">
                 <p>
-                    Each year since 2012, glass floats made by artists Eben Horton, Jennifer Nauck and the glassblowers at <a href=https://theglassstationstudio.com/collections/glass-float-project>The Glass Station Studio and Gallery</a> in Wakefield, Rhode Island 
-                    have been hidden on Block Island as part of the <a href=https://www.blockislandinfo.com/glass-float-project>Block Island Glass Floats project</a>. 
+                    Each year since 2012, glass floats made by artists Eben Horton, Jennifer Nauck and the glassblowers at <a href=https://theglassstationstudio.com/collections/glass-float-project>The Glass Station Studio and Gallery</a> in Wakefield, Rhode Island have been hidden on Block Island as part of the <a href=https://www.blockislandinfo.com/glass-float-project>Block Island Glass Floats project</a>. 
                     Each float is individually numbered and dated. Most of these floats are made from clear glass, but each year the first several glass floats 
-                    (same as the number of years after 2000, so for 2022 there will be 22) are extra fancy floats with bright colors and decorations. Anyone who finds a glass float is asked to register the year and number on their float and 
+                    (same as the number of years after 2000, so for 2023 there will be 23) are extra fancy floats with bright colors and decorations. Anyone who finds a glass float is asked to register the year and number on their float and 
                     where on the island they found it.
                     This interactive map uses <a href="https://www.blockislandinfo.com/glass-float-project/found-floats">that information </a>to show where the regular and fancy floats have been found on the island each year, and how many have been found in each area.
                 </p>
 
             </div>
+        </div>
         <!--This commented out code section is now depolyed as a Leaflet custom control on the map-->
         <!--
         <section id="slide-section">
